array.island.Island.scala.error
Compilation error:
Island:23: error: type mismatch;
 found   : Int
 required: Boolean
    case i if  i=>x => return compteur
               ^Island:23: error: missing parameter type
    case i if  i=>x => return compteur
                  ^